# shipper

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATE.md  Cargo.toml  GEMINI.md  MISSION.md  README.md  RELEASE_CHECKLIST_v0.2.0.md  RELEASE_CHECKLIST_v0.3.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  SECURITY.md  clippy-output.txt  terr.txt  test-list-progress.txt  test-output.txt  tout.txt
crates/shipper/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-auth/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-auth/proptest-regressions/: lib.txt
crates/shipper-auth/src/: lib.rs
crates/shipper-cargo/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-cargo/src/: lib.rs
crates/shipper-cargo/tests/: cargo_commands.rs  redaction_contract.rs
crates/shipper-chunking/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-chunking/src/: lib.rs
crates/shipper-chunking/tests/: chunking_bdd.rs  chunking_contract_integration.rs
crates/shipper-cli/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md  build.rs
crates/shipper-cli/src/: lib.rs  main.rs  progress.rs
crates/shipper-cli/tests/: AGENTS.md  bdd_config.rs  bdd_doctor.rs  bdd_error_handling.rs  bdd_error_recovery.rs  bdd_micro_backends.rs  bdd_parallel.rs  bdd_preflight.rs  bdd_publish.rs  bdd_publish_advanced.rs  bdd_publish_flow.rs  bdd_resume.rs  bdd_status.rs  bdd_workflow.rs  cli_e2e.rs  cli_snapshots.rs  e2e_config.rs  e2e_doctor.rs  e2e_expanded.rs  e2e_plan.rs  e2e_preflight.rs  e2e_publish.rs  e2e_rehearse.rs  e2e_resume.rs  e2e_status.rs  implementation_plan_bdd.rs  integration_config.rs
crates/shipper-config/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md
crates/shipper-config-runtime/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-config-runtime/src/: lib.rs
crates/shipper-config-runtime/tests/: config_runtime_bdd.rs  config_runtime_contract.rs  config_runtime_proptest.rs
crates/shipper-config/src/: lib.rs
crates/shipper-config/tests/: config_integration.rs  config_runtime_bdd.rs  config_runtime_contract.rs  config_runtime_proptest.rs
crates/shipper-encrypt/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md
crates/shipper-encrypt/src/: lib.rs
crates/shipper-engine-parallel/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-engine-parallel/src/: lib.rs  webhook.rs
crates/shipper-engine-parallel/tests/: chunking_bdd.rs  chunking_integration.rs
crates/shipper-environment/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-environment/proptest-regressions/: lib.txt
crates/shipper-environment/src/: lib.rs
crates/shipper-events/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-events/src/: lib.rs
crates/shipper-execution-core/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-execution-core/src/: lib.rs
crates/shipper-execution-core/tests/: execution_core_bdd.rs
crates/shipper-git/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-git/src/: lib.rs
crates/shipper-levels/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-levels/src/: lib.rs
crates/shipper-lock/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-lock/src/: lib.rs
crates/shipper-plan/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-plan/src/: lib.rs
crates/shipper-policy/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-policy/src/: lib.rs
crates/shipper-policy/tests/: policy_bdd.rs  property_tests.rs  runtime_options_contract.rs  snapshot_tests.rs
crates/shipper-process/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-process/src/: lib.rs
crates/shipper-progress/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-progress/src/: lib.rs
crates/shipper-progress/tests/: progress_bdd.rs  snapshots.rs
crates/shipper-registry/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md
crates/shipper-registry/src/: context.rs  http.rs  lib.rs
crates/shipper-retry/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md
crates/shipper-retry/src/: lib.rs
crates/shipper-retry/tests/: retry_integration.rs
crates/shipper-schema/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-schema/src/: lib.rs
crates/shipper-schema/tests/: schema_contract_integration.rs  snapshot_tests.rs
crates/shipper-state/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-state/src/: lib.rs
crates/shipper-state/tests/: state_integration.rs
crates/shipper-storage/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-storage/proptest-regressions/: lib.txt
crates/shipper-storage/src/: lib.rs
crates/shipper-storage/tests/: storage_integration.rs
crates/shipper-store/: CLAUDE.md  Cargo.toml  README.md
crates/shipper-store/src/: lib.rs
crates/shipper-types/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md
crates/shipper-types/src/: lib.rs  schema.rs
crates/shipper-types/tests/: release_levels_integration.rs
crates/shipper/proptest-regressions/: types.txt
crates/shipper/src/: auth.rs  auth_micro.rs  cargo.rs  cargo_micro.rs  config.rs  config_micro.rs  encryption.rs  engine.rs  engine_parallel.rs  engine_parallel_micro.rs  environment.rs  environment_micro.rs  events.rs  events_micro.rs  git.rs  git_micro.rs  lib.rs  lock.rs  lock_micro.rs  main.rs  plan.rs  plan_micro.rs  policy.rs  process.rs  process_micro.rs  property_tests.rs  registry.rs  registry_micro.rs  retry.rs  state.rs  storage.rs  storage_micro.rs  store.rs  store_micro.rs  stress_tests.rs  types.rs  webhook.rs
crates/shipper/tests/: AGENTS.md  config_contract.rs  cross_crate_integration.rs  execution_bdd.rs  facade_integration.rs  pipeline_integration.rs  (+2 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_token_resolve.rs  config_runtime_adapter.rs  duration_parse.rs  encrypt_decrypt.rs  engine_parallel_chunks.rs  event_log_roundtrip.rs  execution_core.rs  execution_state_deserialize.rs  git_context.rs  load_state.rs  plan_builder.rs  plan_levels.rs  plan_ordering.rs  policy_effects.rs  progress_reporter.rs  redact_output.rs  release_levels.rs  resolve_token.rs  retry_strategy.rs  schema_version.rs  types_serialization.rs  webhook_payload.rs
(+992 files in other folders)
