[workspace]
members = [
  "crates/shipper",
  "crates/shipper-cli",
  "crates/shipper-engine-parallel",
  "crates/shipper-schema",
  "crates/shipper-duration",
  "crates/shipper-retry",
  "crates/shipper-encrypt",
  "crates/shipper-types",
  "crates/shipper-events",
  "crates/shipper-auth",
  "crates/shipper-state",
  "crates/shipper-config",
  "crates/shipper-git",
  "crates/shipper-registry",
  "crates/shipper-sparse-index",
  "crates/shipper-cargo",
  "crates/shipper-cargo-failure",
  "crates/shipper-chunking",
  "crates/shipper-environment",
  "crates/shipper-plan",
  "crates/shipper-webhook",
  "crates/shipper-storage",
    "crates/shipper-output-sanitizer",
    "crates/shipper-levels",
    "crates/shipper-execution-core",
    "crates/shipper-config-runtime",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.3.0-rc.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
proptest = "1.11.0"
insta = { version = "1.47.2", features = ["yaml"] }

[profile.release]
strip = true
lto = true
