[package]
name = "shipper-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shipper-engine-parallel = { path = "../crates/shipper-engine-parallel" }
shipper = { path = "../crates/shipper" }
shipper-duration = { path = "../crates/shipper-duration" }
shipper-config = { path = "../crates/shipper-config" }
shipper-schema = { path = "../crates/shipper-schema" }
shipper-policy = { path = "../crates/shipper-policy" }
shipper-output-sanitizer = { path = "../crates/shipper-output-sanitizer" }
shipper-config-runtime = { path = "../crates/shipper-config-runtime" }
shipper-cargo-failure = { path = "../crates/shipper-cargo-failure" }
shipper-git = { path = "../crates/shipper-git" }
shipper-execution-core = { path = "../crates/shipper-execution-core" }
shipper-retry = { path = "../crates/shipper-retry" }
shipper-levels = { path = "../crates/shipper-levels" }
shipper-chunking = { path = "../crates/shipper-chunking" }
shipper-sparse-index = { path = "../crates/shipper-sparse-index" }
shipper-webhook = { path = "../crates/shipper-webhook" }
chrono = "0.4.43"
hmac = "0.12"
sha2 = "0.10"
url = "2"
shipper-plan = { path = "../crates/shipper-plan" }
shipper-types = { path = "../crates/shipper-types" }
tempfile = "3"
temp-env = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

[[bin]]
name = "load_state"
path = "fuzz_targets/load_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resolve_token"
path = "fuzz_targets/resolve_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "duration_codec"
path = "fuzz_targets/duration_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema_version"
path = "fuzz_targets/schema_version.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy_effects"
path = "fuzz_targets/policy_effects.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cargo_failure_classifier"
path = "fuzz_targets/cargo_failure_classifier.rs"
test = false
doc = false
bench = false
[[bin]]
name = "engine_parallel_chunks"
path = "fuzz_targets/engine_parallel_chunks.rs"
test = false
doc = false
bench = false

[[bin]]
name = "execution_core"
path = "fuzz_targets/execution_core.rs"
test = false
doc = false
bench = false

[[bin]]
name = "release_levels"
path = "fuzz_targets/release_levels.rs"
test = false
doc = false
bench = false
[[bin]]
name = "redact_output"
path = "fuzz_targets/redact_output.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sparse_index"
path = "fuzz_targets/sparse_index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_runtime_adapter"
path = "fuzz_targets/config_runtime_adapter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plan_builder"
path = "fuzz_targets/plan_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "git_context"
path = "fuzz_targets/git_context.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webhook_payload"
path = "fuzz_targets/webhook_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "state_load"
path = "fuzz_targets/state_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt_load"
path = "fuzz_targets/receipt_load.rs"
test = false
doc = false
bench = false
