[package]
name = "shipper-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Authentication and token resolution for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-auth"
keywords = ["auth", "token", "registry"]
categories = ["authentication"]

[dependencies]
serde.workspace = true
serde_json = "1.0"
anyhow = "1.0"
toml = "0.9"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"

[lints]
workspace = true