[package]
name = "shipper-chunking"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Chunking helpers for bounded parallel publish execution"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-chunking"
keywords = ["chunking", "parallel", "publish", "pipeline", "utility"]
categories = ["algorithms", "development-tools"]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true

