[package]
name = "shipper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line tool for reliable, resumable Rust workspace publishing"
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/shipper/tree/main/crates/shipper-cli"
homepage = "https://github.com/EffortlessMetrics/shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
keywords = ["cargo", "publish", "workspace", "cli", "ci"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shipper"
path = "src/main.rs"

[dependencies]
shipper.workspace = true
shipper-duration.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
indicatif = "0.18.4"

[lints]
workspace = true

[dev-dependencies]
console = "0.16.3"
assert_cmd = "2"
insta = "1"
predicates = "3"
proptest = { workspace = true }
serial_test = "3"
tempfile = "3"
tiny_http = "0.12"
temp-env = "0.3"
serde_yaml = "0.9"
