[package]
name = "shipper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line tool for reliable, resumable Rust workspace publishing"
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/shipper/tree/main/crates/shipper-cli"
homepage = "https://github.com/EffortlessMetrics/shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
keywords = ["cargo", "publish", "workspace", "cli", "ci"]
categories = ["command-line-utilities", "development-tools"]

# The `shipper-cli` crate is the CLI implementation — argument parsing,
# command dispatch, progress reporting. It exposes `run()` as its sole
# public API; the `shipper` façade crate's binary target forwards to it.
#
# We keep a `[[bin]] name = "shipper-cli"` target so `cargo install
# shipper-cli --locked` still works for operators who want to pin to
# the CLI crate directly. The `[package.name]` → binary-name mapping
# is 1:1, so the binary is `shipper-cli` on $PATH — the façade's
# `shipper` is the name we point new users at.
[[bin]]
name = "shipper-cli"
path = "src/main.rs"

[dependencies]
# Dep alias: `use shipper::…` continues to work inside this crate
# after the upstream rename to `shipper-core` (#95). `workspace = true`
# can't combine with `package = "..."`, so pin path + version
# explicitly. Library API is re-exported unchanged.
shipper = { package = "shipper-core", path = "../shipper-core", version = "0.3.0-rc.1" }
shipper-duration.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
indicatif = "0.18.4"

[lints]
workspace = true

[dev-dependencies]
console = "0.16.3"
assert_cmd = "2"
insta = "1"
predicates = "3"
proptest = { workspace = true }
serial_test = "3"
tempfile = "3"
tiny_http = "0.12"
temp-env = "0.3"
serde_yaml = "0.9"
