[package]
name = "shipper-config-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Config to types conversion helpers for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-config-runtime"
keywords = ["config", "adapter", "conversion"]
categories = ["development-tools"]

[dependencies]
shipper-config = { path = "../shipper-config" }
shipper-types = { path = "../shipper-types" }
shipper-retry = { path = "../shipper-retry" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
