[package]
name = "shipper-engine-parallel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parallel publish execution for shipper release plans"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-engine-parallel"
keywords = ["cargo", "publish", "parallel", "pipeline", "release"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
humantime = "2.3.0"
shipper-chunking = { path = "../shipper-chunking" }
shipper-execution-core = { path = "../shipper-execution-core" }
rand = { version = "0.10.0", features = ["std"] }
serde = "1.0.228"
serde_json = "1.0.149"

shipper-cargo = { path = "../shipper-cargo" }
shipper-events = { path = "../shipper-events" }
shipper-plan = { path = "../shipper-plan" }
shipper-policy = { path = "../shipper-policy" }
shipper-registry = { path = "../shipper-registry" }
shipper-retry = { path = "../shipper-retry" }
shipper-state = { path = "../shipper-state" }
shipper-types = { path = "../shipper-types" }
shipper-sparse-index = { path = "../shipper-sparse-index" }
shipper-webhook = { path = "../shipper-webhook" }

[dev-dependencies]
shipper-encrypt = { path = "../shipper-encrypt" }
proptest.workspace = true
serial_test = "3.3.1"
temp-env = "0.3"
tempfile = "3.25.0"
tiny_http = "0.12.0"

[lints]
workspace = true
