[package]
name = "shipper-events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Event logging for shipper publish operations"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-events"
keywords = ["events", "logging", "publish"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
shipper-types = { path = "../shipper-types" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true