[package]
name = "shipper-execution-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core execution helpers shared across shipper publish engines"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-execution-core"
keywords = ["cargo", "publish", "retry", "execution", "state"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.44", features = ["serde"] }
shipper-cargo-failure = { path = "../shipper-cargo-failure" }
shipper-retry = { path = "../shipper-retry" }
shipper-state = { path = "../shipper-state" }
shipper-types = { path = "../shipper-types" }

[dev-dependencies]
insta = { workspace = true }
proptest.workspace = true
serde = { version = "1", features = ["derive"] }
tempfile = "3.25.0"

[lints]
workspace = true
