[package]
name = "shipper-git"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Git operations for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-git"
keywords = ["git", "publish", "version-control"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
serde.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true