[package]
name = "shipper-levels"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dependency level grouping for parallel shipper publish plans"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-levels"
keywords = ["dependency", "topology", "parallel", "publish"]
categories = ["algorithms", "development-tools"]

[dev-dependencies]
proptest.workspace = true
insta = { workspace = true }

[lints]
workspace = true
