[package]
name = "shipper-lock"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File-based locking mechanism for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-lock"
keywords = ["lock", "file", "concurrency", "process"]
categories = ["filesystem", "concurrency"]

[dependencies]
serde.workspace = true
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "0.5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true