[package]
name = "shipper-plan"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Workspace planning and dependency ordering for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-plan"
keywords = ["cargo", "workspace", "planning", "publishing"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23.1"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4"
sha2 = "0.11"
shipper-cargo = { path = "../shipper-cargo" }
shipper-state = { path = "../shipper-state" }
shipper-types = { path = "../shipper-types" }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
proptest.workspace = true
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[lints]
workspace = true
