[package]
name = "shipper-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Schema version parsing and validation for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-schema"
keywords = ["schema", "versioning", "validation"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true