[package]
name = "shipper-state"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "State persistence for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-state"
keywords = ["state", "persistence", "publish"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
shipper-types = { path = "../shipper-types" }
shipper-environment = { path = "../shipper-environment" }
shipper-encrypt = { path = "../shipper-encrypt" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
