[package]
name = "shipper-state"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "State persistence for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-state"
keywords = ["state", "persistence", "publish"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.44", features = ["serde"] }
shipper-types = { path = "../shipper-types" }
shipper-environment = { path = "../shipper-environment" }
shipper-encrypt = { path = "../shipper-encrypt" }
shipper-schema = { path = "../shipper-schema" }

[dev-dependencies]
tempfile = "3"
proptest.workspace = true
insta = { workspace = true }

[lints]
workspace = true
