[package]
name = "shipper-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Storage backends for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-storage"
keywords = ["storage", "s3", "gcs", "azure"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
serde.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
proptest.workspace = true
insta = { workspace = true, features = ["yaml"] }
temp-env = "0.3"

[lints]
workspace = true