[package]
name = "shipper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for reliable, resumable Rust workspace publishing"
readme = "README.md"
documentation = "https://docs.rs/shipper"
homepage = "https://github.com/EffortlessMetrics/shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
keywords = ["cargo", "publish", "workspace", "release", "automation"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
# Workspace microcrates
shipper-retry = { path = "../shipper-retry" }
shipper-encrypt = { path = "../shipper-encrypt" }
shipper-git = { path = "../shipper-git" }
shipper-registry = { path = "../shipper-registry" }
shipper-webhook = { path = "../shipper-webhook" }
shipper-types = { path = "../shipper-types" }
shipper-config = { path = "../shipper-config" }
shipper-duration = { path = "../shipper-duration" }
shipper-schema = { path = "../shipper-schema" }
shipper-cargo-failure = { path = "../shipper-cargo-failure" }
shipper-sparse-index = { path = "../shipper-sparse-index" }
shipper-output-sanitizer = { path = "../shipper-output-sanitizer" }

anyhow = "1.0.102"
thiserror = "2.0.18"
cargo_metadata = "0.23.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.17.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
rand = { version = "0.10.1", features = ["std"] }
chrono = { version = "0.4.44", features = ["serde"] }
humantime = "2.3.0"
which = "8.0"
toml = "1.0.3"
dirs = "6.0"
hex = "0.4.3"
gethostname = "1.1.0"
tokio = { version = "1.42", features = ["rt", "time", "sync", "macros"] }
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# HMAC for webhook signatures
hmac = "0.13"
sha2 = "0.11"

[features]
micro-encrypt = []
micro-webhook = []
micro-types = ["micro-webhook", "micro-encrypt", "micro-config"]
micro-config = ["micro-types"]
micro-all = ["micro-encrypt", "micro-webhook", "micro-types", "micro-config"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.26.0"
insta = { version = "1.46.3", features = ["yaml"] }
proptest = "1.10.0"
serial_test = "3.4.0"
tiny_http = "0.12.0"
temp-env = "0.3"
console = "0.16.3"

