[package]
name = "shipper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reliable, resumable cargo publish for Rust workspaces. Install with `cargo install shipper`."
readme = "README.md"
documentation = "https://docs.rs/shipper"
homepage = "https://github.com/EffortlessMetrics/shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
keywords = ["cargo", "publish", "workspace", "release", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

# The `shipper` crate is the UX-focused install façade:
#   - `cargo install shipper` installs the `shipper` CLI (via the
#     binary target below, which forwards to `shipper_cli::run`).
#   - Library consumers can `use shipper::...` to access the public
#     core API (re-exported from `shipper-core`).
#
# All real logic lives in `shipper-core` (library) and `shipper-cli`
# (argument parsing + command dispatch). This crate exists so users
# have a single, memorable entry point.

[[bin]]
name = "shipper"
path = "src/main.rs"

[dependencies]
shipper-core.workspace = true
shipper-cli.workspace = true
anyhow = "1"

[lints]
workspace = true
