[package]
name = "shipper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reliable, resumable `cargo publish` for Rust workspaces. Install with `cargo install shipper`."
readme = "README.md"
documentation = "https://docs.rs/shipper"
homepage = "https://github.com/EffortlessMetrics/shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
keywords = ["cargo", "publish", "workspace", "release", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

# Package-level unification: one public crate carries both the library
# API and the `shipper` CLI binary. The #95 reframe replaces the earlier
# experiment that tried to split this into `shipper-core` + `shipper-cli`
# + a facade; see GH issue #95 for the rationale.
[[bin]]
name = "shipper"
path = "src/bin/shipper.rs"

[dependencies]
# Workspace microcrates
shipper-retry.workspace = true
shipper-encrypt.workspace = true
shipper-registry.workspace = true
shipper-webhook.workspace = true
shipper-types.workspace = true
shipper-config.workspace = true
shipper-duration.workspace = true
shipper-cargo-failure.workspace = true
shipper-sparse-index.workspace = true
shipper-output-sanitizer.workspace = true

anyhow = "1.0.102"
thiserror = "2.0.18"
cargo_metadata = "0.23.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.17.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
rand = { version = "0.10.1", features = ["std"] }
chrono = { version = "0.4.44", features = ["serde"] }
humantime = "2.3.0"
which = "8.0"
toml = "1.0.3"
dirs = "6.0"
hex = "0.4.3"
gethostname = "1.1.0"
tokio = { version = "1.42", features = ["rt", "time", "sync", "macros"] }
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# HMAC for webhook signatures
hmac = "0.13"
sha2 = "0.11"

# CLI-only deps (drive the `shipper` binary via `crate::cli`). They're
# in the regular `[dependencies]` because the CLI module is
# unconditionally compiled — keeping it behind a feature gate is a
# later follow-on if the compile-time cost bites.
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.18.4"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.26.0"
insta = { version = "1.46.3", features = ["yaml"] }
proptest = "1.10.0"
serial_test = "3.4.0"
tiny_http = "0.12.0"
temp-env = "0.3"
console = "0.16.3"

